# AoC-2022

./: .gitignore  .style.yapf  README.md  pyproject.toml
data/: README.md
src/: day00_template.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day18.py  day20.py  day21.py
src/common/: fsnode.py  iter_utils.py  meta_utils.py
