[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = "Advent of Code 2022 solutions"
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
numpy = "^1.23.5"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pylint = "^2.15.7"
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
